# utsyn

./: .clang-format  .clang-tidy  .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  LICENSE  MILESTONE.md  OPTION-B-HANDOVER.md
plugins/example_plugin/: ExamplePlugin.cpp
plugins/robot_description/: RobotActor.cpp  RobotActor.hpp  RobotDescriptionPlugin.cpp
plugins/robot_monitor/: RobotMonitorPlugin.cpp
src/: main.cpp
src/app/: Application.cpp  Application.hpp  LayoutManager.cpp  LayoutManager.hpp  Logger.cpp  Logger.hpp  PanelRegistry.cpp  PanelRegistry.hpp  Theme.hpp
src/plugins/: IPlugin.hpp  PluginLoader.cpp  PluginLoader.hpp
src/rendering/: Actor.hpp  SceneManager.cpp  SceneManager.hpp  Viewport.cpp  Viewport.hpp  ViewportManager.cpp  ViewportManager.hpp
src/ros/: ISubscriptionRegistry.hpp  PackageResolver.cpp  PackageResolver.hpp  RosCore.cpp  RosCore.hpp  SpscRing.hpp  SubscriptionBroker.cpp  SubscriptionBroker.hpp  SubscriptionRegistry.cpp  SubscriptionRegistry.hpp  TfListener.cpp  TfListener.hpp  TopicStats.hpp
src/widgets/: MessageMonitor.cpp  MessageMonitor.hpp  TerminalUi.hpp  TfTree.cpp  TfTree.hpp  TopicPlot.cpp  TopicPlot.hpp  ViewportPanel.cpp  ViewportPanel.hpp
